# crashengine

./: .clang-format  .gitmodules  CMakeLists.txt  conanfile.txt
default-handlers/include/CrashEngine/default-handlers/: glfw.hpp  opengl.hpp
default-handlers/include/CrashEngine/default-handlers/opengl/: OpenGlBuffer.hpp  OpenGlMesh.hpp  OpenGlShader.hpp  OpenGlTexture.hpp
default-handlers/src/CrashEngine/default-handlers/: fucking_imp.cpp  glfw.cpp  opengl.cpp
default-handlers/src/CrashEngine/default-handlers/opengl/: OpenGlBuffer.cpp  OpenGlMesh.cpp  OpenGlShader.cpp  OpenGlTexture.cpp
demo/assets/: shader.frag  shader.vert
demo/include/: MainScene.hpp
demo/src/: MainScene.cpp  main.cpp
engine/include/CrashEngine/: Camera.hpp  CrashEngine.hpp  Data.hpp  Entity.hpp  Mesh.hpp  Scene.hpp  Shader.hpp  Texture.hpp  logger.hpp  utiliy.hpp
engine/include/CrashEngine/handlers/: graphics_api_handler.hpp  window_handler.hpp
engine/include/CrashEngine/math/: vec2.hpp  vec3.hpp  vec4.hpp  vecs.hpp
engine/src/CrashEngine/: Camera.cpp  CrashEngine.cpp  Entity.cpp  Scene.cpp  Shader.cpp  Texture.cpp  logger.cpp  utility.cpp
engine/src/CrashEngine/math/: vec2.cpp  vec3.cpp  vec4.cpp  vecs.cpp
include/CrashEngine/: crashengine.hpp
include/default-handlers/: glfw_handler.hpp
scripts/: format.sh
src/CrashEngine/: crashengine.cpp
src/crashengine/: main.cpp
src/default-handlers/: fucking_imp.cpp  glfw_handler.cpp
src/demo/: main.cpp
test/: TestCase.cpp
vendors/glad/include/glad/: gl.h
